Add PWM,  OLED, ADC to Project

--- a/Program/BLDC/MDK-ARM/BLDC/BLDC.build_log.htm
+++ b/Program/BLDC/MDK-ARM/BLDC/BLDC.build_log.htm
@@ -22,36 +22,14 @@ Dialog DLL:      TARMCM1.DLL V1.10.0.0
  
 <h2>Project:</h2>
 C:\Users\weifengdq\Documents\GitHub\BLDC_DRV11873\Program\BLDC\MDK-ARM\BLDC.uvprojx
-Project File Date:  12/07/2016
+Project File Date:  12/08/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 2 (build 183)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'BLDC'
-assembling startup_stm32f030x6.s...
-compiling stm32f0xx_hal_pwr_ex.c...
-compiling stm32f0xx_hal.c...
-compiling stm32f0xx_hal_i2c_ex.c...
-compiling system_stm32f0xx.c...
-compiling stm32f0xx_hal_rcc_ex.c...
-compiling stm32f0xx_hal_flash_ex.c...
-compiling stm32f0xx_hal_dma.c...
-compiling stm32f0xx_hal_tim_ex.c...
-compiling stm32f0xx_hal_uart_ex.c...
-compiling stm32f0xx_hal_pwr.c...
-compiling stm32f0xx_hal_cortex.c...
-compiling stm32f0xx_hal_gpio.c...
-compiling stm32f0xx_hal_rcc.c...
-compiling stm32f0xx_hal_tim.c...
-compiling stm32f0xx_hal_i2c.c...
-compiling stm32f0xx_it.c...
-compiling main.c...
-compiling stm32f0xx_hal_flash.c...
-compiling usart.c...
-compiling stm32f0xx_hal_uart.c...
-compiling gpio.c...
-compiling stm32f0xx_hal_msp.c...
+compiling tim.c...
 linking...
-Program Size: Code=3868 RO-data=232 RW-data=12 ZI-data=1140  
+Program Size: Code=11936 RO-data=232 RW-data=12 ZI-data=1732  
 "BLDC\BLDC.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -70,7 +48,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
